--- a/Front-End-Prc/HTML+CSS+JS/My_Projects/FE_PROJECT_Cal/main.css
+++ b/Front-End-Prc/HTML+CSS+JS/My_Projects/FE_PROJECT_Cal/main.css
@@ -15,6 +15,7 @@ body {
 .calculator {
     width: 287px;
     border: 1px solid #333;
+    border-radius: 10px;
     background-color: #ccc;
     padding : 5px;
 }
@@ -28,6 +29,7 @@ body {
 
 .calculator form input {
     border : 2px solid #333;
+    border-radius: 10px;
     cursor : pointer;
     font-size: 19px;
 }
