--- a/Front-End-Prc/HTML+CSS+JS/JS_Study/JS_Prc/JS_Study_Toggle_Btn/style.css
+++ b/Front-End-Prc/HTML+CSS+JS/JS_Study/JS_Prc/JS_Study_Toggle_Btn/style.css
@@ -29,7 +29,7 @@ input{
     width:90px;
     height:90px;
     background: #fff;
-    border-radius: 200px;
+    border-radius: 50%;
     margin: 5px;
     transition: 0.4s;
 }
