--- a/Front-End-Prc/HTML+CSS+JS/My_Projects/FE_PROJECT_Weather_APP/style.css
+++ b/Front-End-Prc/HTML+CSS+JS/My_Projects/FE_PROJECT_Weather_APP/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
+
 *{
     margin:0;
     padding:0;
@@ -14,16 +16,16 @@ body{
     background: #073450;
 }
 
-.container{
+.weather-container{
     position:relative;
-    width:400px;
+    width:600px;
     height:105px;
     background: #fff;
     padding: 28px 32px;
     border-radius: 18px;
     overflow: hidden;
-    font-family: 'Roboto', sans-serif;
-    transition: 0.6s ease-out;
+    font-family: "Noto Sans KR", sans-serif;
+    /* transition: 0.6s ease-out; */
 }
 
 .search-box{
@@ -103,6 +105,7 @@ body{
     text-transform: capitalize;
 }
 
+
 .weather-details{
     width:100%;
     display:flex;
@@ -161,7 +164,7 @@ body{
     color:#073450;
     font-size:22px;
     font-weight: 500;
-    margin-top: 12px;
+    margin-top: 80px;
 }
 
 .weather-box, .weather-details{
