--- a/Front-End-Prc/Node_React_Next_Study/Learn_React_Next/section5_Naras/src/components/CountryList.module.css
+++ b/Front-End-Prc/Node_React_Next_Study/Learn_React_Next/section5_Naras/src/components/CountryList.module.css
@@ -3,3 +3,11 @@
   flex-wrap: wrap;
   gap: 20px;
 }
+
+@media screen and (max-width: 500px){
+  .container{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
