--- a/Front-End-Prc/HTML+CSS+JS/JS_Study/JS_Prc/Airline_Prc/style.css
+++ b/Front-End-Prc/HTML+CSS+JS/JS_Study/JS_Prc/Airline_Prc/style.css
@@ -70,7 +70,7 @@ section .reserve-ticket{
 }
 
 .big-line{
-  width: 640px;
+  width: 100%;
   border-bottom: dashed 1px #b6bfd3;
   margin-bottom: 24px;
 }
